# rust_rocket_tera_semantic

./: Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: base.html.tera  index.html.tera
templates/customer/: create_customer.html.tera
templates/error/: 404.html.tera
templates/mis/: hello.html.tera  old.tera
templates/partials/: fixed_menu.html.tera  side_menu.html.tera
templates/partials/side_menu/: customer_profile.html.tera  invoicing.html.tera  labour.html.tera  material.html.tera  purchasing.html.tera  services.html.tera  work_orders.html.tera
templates/resources/: scripts.html.tera  scripts_linking.html.tera  styles.html.tera  styles_linking.html.tera
