[package]
name = "css"
version = "0.1.0"
authors = ["Hasan Yousef <hasan.Oryx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.15.2"
wasm-bindgen = "0.2.33 "

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "serve", "tera_templates", "handlebars_templates"]
